--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "homepage": "https://github.com/bel0v/api#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "got": "^11.8.1",
     "lodash.sample": "^4.2.1",
     "tumblr.js": "^3.0.0"
   },
